[package]
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
name = "json-resp"
version = "0.1.2"

edition = "2021"

categories = ["web-programming::http-server"]
description = "A utility to generate easy json response/errors"
documentation = "https://docs.rs/json-resp"
keywords = ["web", "json", "response", "axum"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/pooyamb/json-resp/"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1"
axum = "0.6"

# Derive: macros
json-resp-derive = "0.1"

# Derive: log internal errors
log = { version = "0.4", optional = true }

# Openapi support
utoipa = { version = "3", optional = true }

[features]
default = []
openapi = ["utoipa", "json-resp-derive/openapi"]
log = ["dep:log", "json-resp-derive/log"]
